2009-01-20  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)

2009-01-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #7265: Submodules of Web module can't work with mod.php and the _DISPATCH system

2008-07-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed LICENSE.txt to reference GPL "version 2 or later"

2008-06-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8784: htmlArea RTE 1.3.9 (TYPO3 4.0.9) and 1.2.2 (TYPO3 3.8.1) do not work correcty in Firefox 3

2008-06-11  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0.9
	* (security) Fixed bug #8674: Vulnerability of security bulletin typo3-20080611-1: Default value of fileDenyPattern allows arbitrary code execution on Apache (Patch by Henning Pingel, thanks!)
	* (security) Fixed a low-severity Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20080611-1/ - thanks to Christian Seifert, Jeroen van Iddekinge and Arnd Messer for discovering and reporting this issue.

2008-06-11  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7646: Firefox 3.0 mixes up frames (versions before TYPO3 4.2)

2008-04-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #4768: Missing is_array() check in tslib_fe::getStorageSiterootPids()

2007-12-17  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #6996: Versioning in clickmenu was unavailable for non-admins due to a problem of an earlier bugfix #4160 (Thanks to Helmut Hummel for the correction)

2007-12-10  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.0.8

2007-12-10  Ingmar Schlecht  <ingmar@typo3.org>
