@@ -1,6 +1,7 @@
 2009-01-20  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
+	* Fixed bug #10133: Command execution in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
 
 2006-11-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
